5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1668_1396.log
== TEST (2019-04-15 19:48:57) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo+10
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:49:08) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo+10
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- EXECUTION TIME:
0.155021
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
224.5
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:12) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo+10
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:49:30) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo+gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:50:26) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo*gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:09) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo*gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:51:41) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo*gorjeta
if(300>=gorjeta):
	print(round(gorjeta, 2))
else:
	print(round(gorjeta, 2))
-- OUTPUT:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:36) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
consumo1=consumo*gorjeta
if(300>=consumo1):
	print(round(consumo1, 2))
else:
	print(round(consumo1, 2))
-- OUTPUT:
2245.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:52) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
valor_total=consumo+gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:53:52) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
valor_total=consumo+gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- EXECUTION TIME:
0.138057
-- TEST CASE 1:
---- input:
224.5
---- correct output:
246.95
---- user output:
224.5
-- TEST CASE 2:
---- input:
365.15
---- correct output:
387.06
---- user output:
365.15
-- TEST CASE 3:
---- input:
500
---- correct output:
530.0
---- user output:
500.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:53:53) 
-- CODE:
consumo=float(input("quanto consumo:"))
gorjeta=10
valor_total=consumo+gorjeta
if(300>=consumo):
	print(round(consumo, 2))
else:
	print(round(consumo, 2))
-- OUTPUT:
224.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:54:46) 
-- CODE:
valorconsumido=float(input("quanto consumo:"))
gorjeta=10
valor_total=consumo+gorjeta
if(300>=consumo):
	print(round(valorconsumido, 2))
else:
	print(round(valorconsumido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    valor_total=consumo+gorjeta
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:55:00) 
-- CODE:
valorconsumido=float(input("quanto consumo:"))
gorjeta=10
valor_total=valorconsumido+gorjeta
if(300>=consumo):
	print(round(valorconsumido, 2))
else:
	print(round(valorconsumido, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(300>=consumo):
NameError: name 'consumo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
